# sourceresponse

./: .gitignore  CMakeLists.txt  README  bright-sources.txt  nlplfitter.cpp  nlplfitter.h  polynomialfitter.cpp  polynomialfitter.h  sourceresponse.cpp
model/: bbsmodel.h  measuredsed.h  measurement.h  model.h  modelcomponent.h  modelparser.h  modelsource.h  powerlawsed.h  spectralenergydistribution.h
